// Copyright (c) 2018-present,  NebulaChat Studio (https://nebula.chat).
//  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Author: Benqi (wubenqi@gmail.com)

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nebulaim.zproto";
option java_outer_classname = "ZProtoChatTest";
option optimize_for = CODE_SIZE;

package zproto;

// Interface exported by the server.
service ChatTest {
    rpc Connect(ChatSession) returns (stream ChatMessage);
    rpc SendChat(ChatMessage) returns (VoidRsp2);
}

message ChatMessage {
    string sender_session_id = 1;
    string message_data = 3;
}

message ChatSession {
    string session_id = 1;
}

message VoidRsp2 {
}
